--- a/packages/secrets/package.json
+++ b/packages/secrets/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@anew/secrets",
+  "name": "@packages/secrets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun index.ts",
+    "dev:env": "bun --env-file=../../.env index.ts"
   },
   "keywords": [],
   "author": "",
