--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "@anew/env",
+  "name": "@packages/env",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun index.ts",
+    "dev:env": "bun --env-file=../../.env index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.28.1",
   "dependencies": {
+    "@infisical/sdk": "4.0.6",
+    "@packages/secrets": "workspace:*",
     "dotenv": "^17.2.3",
     "zod": "^4.3.5"
   }
