--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,21 +1,22 @@
 {
-    "name": "@apps/api",
-    "scripts": {
-        "dev": "bun run --hot src/index.ts",
-        "cq": "biome check --write",
-        "cq:deep": "biome lint --write --only=nursery/noImportCycles --only=security/noSecrets",
-        "build": "bun build src/index.ts --outdir dist/ --target bun"
-    },
-    "dependencies": {
-        "hono": "^4.11.4",
-        "zod": "^4.3.5"
-    },
-    "devDependencies": {
-        "@biomejs/biome": "2.3.11",
-        "@types/bun": "latest",
-        "@packages/env": "workspace:*",
-        "@packages/database": "workspace:*",
-        "@packages/secrets": "workspace:*",
-        "@packages/auth": "workspace:*"
-    }
+	"name": "@apps/api",
+	"scripts": {
+		"dev": "bun --port 3001 src/index.ts",
+		"cq": "biome check --write",
+		"cq:deep": "biome lint --write --only=nursery/noImportCycles --only=security/noSecrets",
+		"build": "bun build src/index.ts --outdir dist/ --target bun"
+	},
+	"dependencies": {
+		"@packages/auth": "workspace:*",
+		"drizzle-orm": "^0.45.1",
+		"hono": "^4.11.4",
+		"zod": "^4.3.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.11",
+		"@packages/database": "workspace:*",
+		"@packages/env": "workspace:*",
+		"@packages/secrets": "workspace:*",
+		"@types/bun": "latest"
+	}
 }
